log
Sun 12 May 2024 09:51:07 PM UTC: 
 treemap.c | 63 +++++++++++++++++++++++----------------------------------------
 1 file changed, 23 insertions(+), 40 deletions(-)
 tests:  4|7
total_score: 5/70
cbf8297
Sun 12 May 2024 09:55:52 PM UTC: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
a06d267
Sun 12 May 2024 10:04:04 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|6
total_score: 15/70
9067bad
Sun 12 May 2024 10:04:32 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
61e4ebd
Sun 12 May 2024 10:10:26 PM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
d7a3c66
Sun 12 May 2024 10:10:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
3d7eef9
Sun 12 May 2024 10:12:13 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|5
total_score: 15/70
0e77b06
Sun 12 May 2024 10:12:34 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
01de8c9
Sun 12 May 2024 10:17:43 PM UTC: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  0|0
10b41d1
Sun 12 May 2024 10:21:26 PM UTC: 
 treemap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  0|0
83c496d
Sun 12 May 2024 10:24:07 PM UTC: 
 treemap.c | 37 ++++++++++++++++++++++++++++++-------
 1 file changed, 30 insertions(+), 7 deletions(-)
 tests:  0|0
8a1a689
Sun 12 May 2024 10:28:14 PM UTC: 
 treemap.c | 83 +++++++++++++++++++++++++--------------------------------------
 1 file changed, 33 insertions(+), 50 deletions(-)
 tests:  19|3
total_score: 40/70
587a801
Sun 12 May 2024 10:32:27 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  19|3
total_score: 40/70
c6bfaf2
Sun 12 May 2024 10:35:29 PM UTC: 
 treemap.c | 30 +++++++++++++++++-------------
 1 file changed, 17 insertions(+), 13 deletions(-)
 tests:  22|2
total_score: 50/70
297e1fa
Sun 12 May 2024 10:38:03 PM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:194:1: error: control reaches end of non-void function [-Werror=return-type]
  194 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
83303b5
Sun 12 May 2024 10:38:49 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  26|1
total_score: 60/70
004c58b
Sun 12 May 2024 10:39:28 PM UTC: 
 treemap.c | 29 +++++++++++++++--------------
 1 file changed, 15 insertions(+), 14 deletions(-)
 tests:  29|0
total_score: 70/70
e03a73a
